2012-03-19  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (compute-enriched-decoded-arglist): Add
	arglist display for MULTIPLE-VALUE-CALL, the same as with APPLY.

2012-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-motd.lisp,
	 swank-clipboard.lisp,
         swank-hyperdoc.lisp: Add provide.

2012-03-08  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (print-decoded-arglist): When the source of
	the arglist is a local definition from FLET, some parts may be
	represented as ARGLIST-DUMMY, handle them.

2012-03-14  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (%macroexpand): Use Kawa's syntaxutils.

2012-03-06  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (module-method>meth-ref):  Slightly better
	heuristic for vararg functions.

2012-03-06  Helmut Eller  <heller@common-lisp.net>

	Add missing provide.

	* swank-repl.lisp
	* swank-util.lisp
	* swank-mrepl.lisp
	* swank-snapshot.lisp

2012-03-06  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-export-save-file): New variable, when
	set to T saves package.lisp after each modification. Defaults to NIL.

2012-01-06  Helmut Eller  <heller@common-lisp.net>

	* swank-mrepl.lisp (send-prompt): Fix use of OR.
	Reported by Mark H. David.

2012-03-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1): Fix indentation
	of (and ;; Foo\n...). Previously following lines were indented by one, instead
	of using normal indentation.

	* slime-cl-indent-test.txt (tests 84-86): Tests.

2011-12-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-looking-at-keyword): New function. Looks
	past #+foo expressions.
	(common-lisp-backward-keyword-argument): New function. Semi-aware
	of #+foo expressions.
	(common-lisp-indent-function-1):
	1. Use `common-lisp-indent-parse-state-start'.
	2. Move #+/- cleavernes outside the cond: it is always a default, and shouldn't